# shenghong

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.prod.example  Dockerfile  pyproject.toml  start.ps1  start.sh
backend/app/: main.py  schemas.py
backend/app/api/v1/: root_word.py  router.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  root_word.py
backend/app/schemas/: __init__.py
backend/app/services/: crawler.py  matcher.py  minio_client.py  root_word_service.py
backend/scripts/sql/: 20260615_root_word.sql
backend/xray/: config.json
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/views/: Dashboard.vue  LogData.vue  SourceData.vue
